[package]
name = "rate-limiter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
parking_lot = "0.12"
redis = { version = "1.0", features = [
    "aio",
    "tokio-comp",
    "connection-manager",
] }
tokio = { version = "1.49", features = ["full"] }
tracing = "0.1"
tracing-test = "0.2"
