[package]
name = "rate-limiter"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
moka = { version = "0.12", features = ["future"] }
parking_lot = "0.12"
redis = { version = "1.0", features = [
    "aio",
    "tokio-comp",
    "connection-manager",
] }
thiserror = "1.0"
tokio = { version = "1.49", features = ["sync", "time", "rt", "macros"] }
tracing = "0.1"
tracing-test = "0.2"
